# zakki

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
asset/: common.js  config.toml  crypto.html  decrypt.js  head.html  header.html  index.html  index.js  page.html  script.js  search.js  segmenter.js  style.css  tag.html  theme.js
src/: command.rs  config.rs  convert.rs  main.rs  path.rs  util.rs
src/command/: build.rs  clean.rs  init.rs
src/util/: aes_256_cbc.rs  bloom_filter.rs  fxhash.rs  path_ext.rs  segmenter.rs  vec_ext.rs
