[package]
name = "zakki"
version = "0.7.0"
edition = "2021"

[profile.release]
strip = true

[dependencies]
aes = "0.8.4"
anyhow = "1.0.82"
base64 = "0.22.1"
cbc = { version = "0.1.2", features = ["std"] }
clap = { version = "4.5.4", features = ["derive"] }
icu_segmenter = { version = "1.5.0", features = ["compiled_data"] }
itertools = "0.13.0"
katex = "0.4.6"
pathdiff = "0.2.1"
phf = "0.11.2"
pulldown-cmark = { version = "0.12.1", features = ["simd"] }
rand = "0.8.5"
rayon = "1.10.0"
regex = "1.10.4"
rust_icu = "5.0.0"
scraper = "0.20.0"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
serde_yaml = "0.9.34"
sha2 = "0.10.8"
toml = "0.8.14"
yaml-rust2 = "0.8.0"
