[package]
name = "zakki"
version = "0.11.0"
edition = "2024"

[profile.release]
strip = true

[dependencies]
aes = "0.8.4"
anyhow = "1.0.95"
base64 = "0.22.1"
cbc = { version = "0.1.2", features = ["std"] }
clap = { version = "4.5.23", features = ["derive"] }
itertools = "0.14.0"
katex = "0.4.6"
paste = "1.0.15"
phf = "0.11.2"
pulldown-cmark = { version = "0.13.0", features = ["simd"] }
rand = "0.9.0"
rayon = "1.10.0"
regex = "1.11.1"
scraper = "0.23.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
serde_yaml = "0.9.34"
sha2 = "0.10.8"
toml = "0.8.19"
